workspace-sf/force-app/main/default/objects/RiscoGarantia__c/RiscoGarantia__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre as garantias e os riscos</description>
    <label>Risco da garantia</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Riscos da garantia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>