workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <formula>Risco__r.Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local</label>
    <type>Text</type>
</CustomField>