workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/PercentualMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualMinimo__c</fullName>
    <label>Percentual mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>