workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/QuantidadeRiscoMaxima__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeRiscoMaxima__c</fullName>
    <label>Quantidade de risco máxima</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>