workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/QuantidadeRiscoMinima__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeRiscoMinima__c</fullName>
    <label>Quantidade de risco mínima</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>