workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/Risco__c.field-meta.xml
<CustomField>
    <fullName>Risco__c</fullName>
    <label>Risco</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TabelaRisco__c</field>
            <operation>equals</operation>
            <valueField>Risco__c.Tabela__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Risco__c</referenceTo>
    <relationshipLabel>Riscos da garantia</relationshipLabel>
    <relationshipName>RiscosGarantia</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>