workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/RiscoGarantia__c.field-meta.xml
<CustomField>
    <fullName>RiscoGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risco da garantia</label>
    <referenceTo>RiscoGarantia__c</referenceTo>
    <relationshipLabel>Riscos da garantia</relationshipLabel>
    <relationshipName>RiscosGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>