workspace-sf/force-app/main/default/objects/RiscoGarantia__c/fields/TabelaRisco__c.field-meta.xml
<CustomField>
    <fullName>TabelaRisco__c</fullName>
    <label>Tabela de risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adicional de parto para garantia DIT</fullName>
            </value>
            <value>
                <fullName>Danos Corporais (Parciais) - Órgãos e Estruturas Corporais</fullName>
            </value>
            <value>
                <fullName>Diárias por Incapacidade Temporária</fullName>
            </value>
            <value>
                <fullName>Invalidez Permanente - Diversos</fullName>
            </value>
            <value>
                <fullName>Invalidez Permanente - Invalidez Permanente</fullName>
            </value>
            <value>
                <fullName>Invalidez Permanente - Membros Inferiores</fullName>
            </value>
            <value>
                <fullName>Invalidez Permanente - Membros Superiores</fullName>
            </value>
            <value>
                <fullName>Invalidez Permanente Total - Invalidez Permanente Total</fullName>
            </value>
            <value>
                <fullName>Majoração - Vida Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>